--- a/front/src/styles/index.sass
+++ b/front/src/styles/index.sass
@@ -1,5 +1,100 @@
-@import ./Animations
-    
+@import ./animations
+@import ./vars
+
+// add font
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap')
+
+// reset default styles
+*
+    padding: 0
+    margin: 0
+    -webkit-box-sizing: border-box
+    -moz-box-sizing: border-box
+    font-family: $default-font
+    box-sizing: border-box
+    &:before, &:after
+        -webkit-box-sizing: border-box
+        -moz-box-sizing: border-box
+        box-sizing: border-box
+
+*::-webkit-input-placeholder
+    color: #666
+    opacity: 1
+
+*:-moz-placeholder
+    color: #666
+    opacity: 1
+
+*::-moz-placeholder
+    color: #666
+    opacity: 1
+
+*:-ms-input-placeholder
+    color: #666
+    opacity: 1
+
+body input:focus:required:invalid,
+body textarea:focus:required:invalid
+    color: #666
+body input:required:valid,
+body textarea:required:valid
+    color: #666
+
+html, body
+    height: 100%
+    box-sizing: border-box
+
+h1
+    font-size: 24px
+    letter-spacing: -0.02em
+
+h2
+    line-height: 22px
+    font-size: 18px
+
+main
+    position: relative
+    z-index: -1
+
+input
+    border: none
+    background-image: none
+    background-color: transparent
+    -webkit-box-shadow: none
+    -moz-box-shadow: none
+    box-shadow: none
+    &:focus
+        outline: none
+
+button
+    padding: 0
+    border: none
+    font: inherit
+    color: inherit
+    background-color: transparent
+    outline: none
+    &:hover
+        border: none
+        outline: none
+    &:active
+        border: none
+        outline: none
+    &:focus
+        outline: none
+        border: none
+
+a
+    text-decoration: none
+    color: $black
+
+p
+    line-height: 17px
+
+hr
+    border-top: 0px
+
+
+// main ui styles
 .flex
     display: flex
 
