add promo on main page

--- a/front/src/pages/Main/MainPage.sass
+++ b/front/src/pages/Main/MainPage.sass
@@ -3,8 +3,27 @@
 .main-page 
     align-items: center
     flex-direction: column
+    height: 100%
 
     &__promo
         justify-content: center
         align-items: center
         height: 100%
+        margin-top: -153px
+        flex-direction: column
+
+    &__promo-title, &__promo-desc
+        font-weight: 600
+        margin-bottom: 34px
+
+    &__promo-title
+        font-size: 36px
+
+    &__promo-desc
+        font-size: 26px
+        text-align: center
+
+    &__promo-logo
+        svg
+            height: 38px !important
+            width: 38px !important
