add animated background on main page, upd router, add animations

--- a/front/src/pages/Main/MainPage.sass
+++ b/front/src/pages/Main/MainPage.sass
@@ -9,7 +9,7 @@
         justify-content: center
         align-items: center
         height: 100%
-        margin-top: -153px
+        margin-top: -100px
         flex-direction: column
 
     &__promo-title, &__promo-desc
@@ -27,3 +27,10 @@
         svg
             height: 38px !important
             width: 38px !important
+
+.particles-bg-canvas-self
+    position: absolute
+    z-index: -1
+    top: 0
+    left: 0
+  
