add layout on about and work page

--- a/front/src/styles/index.sass
+++ b/front/src/styles/index.sass
@@ -105,3 +105,9 @@ hr
     display: flex
     align-items: center
     flex-direction: column
+
+    
+@media screen and (max-width: 890px) 
+    .page
+        padding-top: 10px
+        padding-bottom: 70px
