--- a/front/src/pages/About/AboutPage.sass
+++ b/front/src/pages/About/AboutPage.sass
@@ -1,5 +1,16 @@
 @import ../../styles/vars
 
 .about-page
-    align-items: center
     flex-direction: column
+    width: 70%
+
+    &__title
+        margin-top: 50px
+        font-size: 32px
+        text-align: left
+        font-weight: bold
+
+    &__desc
+        margin-top: 100px
+        font-size: 26px
+        text-align: left
