--- a/front/src/pages/About/AboutPage.sass
+++ b/front/src/pages/About/AboutPage.sass
@@ -14,3 +14,23 @@
         margin-top: 100px
         font-size: 26px
         text-align: left
+
+    &__stack
+        margin-top: 100px
+        flex-direction: column
+
+        div:first-child
+            margin-right: 40px
+
+    &__stack-item
+        margin: 20px 0
+        flex-direction: row
+        align-items: center
+
+    &__stack-item-icon
+
+        img
+            height: 300px
+
+    &__stack-item-desc
+        font-size: 26px
