--- a/front/src/pages/Main/MainPage.sass
+++ b/front/src/pages/Main/MainPage.sass
@@ -9,6 +9,7 @@
         justify-content: center
         align-items: center
         height: 100%
+        margin-top: -40px
         flex-direction: column
 
     &__promo-title, &__promo-desc
