--- a/front/src/pages/About/AboutPage.sass
+++ b/front/src/pages/About/AboutPage.sass
@@ -26,6 +26,7 @@
         margin: 20px 0
         flex-direction: row
         align-items: center
+        justify-content: center
 
     &__stack-item-icon
 
@@ -34,3 +35,26 @@
 
     &__stack-item-desc
         font-size: 26px
+
+
+@media screen and (max-width: 890px) 
+    .about-page
+
+        &__stack
+            
+            div
+                margin-right: 0 !important
+
+        &__stack-item
+            flex-wrap: wrap
+            margin: 30px 0
+            margin-right: 0px
+
+        &__stack-item-icon
+            margin-bottom: 10px
+
+            img
+                height: 250px
+        
+        .revert
+            flex-wrap: wrap-reverse
