add work page content, fix footer margin and adaptivity in nav

--- a/front/src/components/Nav/Nav.sass
+++ b/front/src/components/Nav/Nav.sass
@@ -14,6 +14,7 @@
     &__theme-icon
         width: 32px
         height: 32px
+        cursor: pointer
 
         svg
             width: 32px !important
@@ -37,12 +38,13 @@
     
     &__icon
         display: none
+        cursor: pointer
         
     .focus
         border-bottom: 1px solid $black
 
 
-@media screen and (max-width: 890px) 
+@media screen and (max-width: 990px) 
     .nav
 
         &__icon-container
