--- a/front/src/components/Footer/Footer.sass
+++ b/front/src/components/Footer/Footer.sass
@@ -1,6 +1,6 @@
 .footer
     justify-content: center
     align-items: center
-    margin-top: 60px
+    text-align: center
     padding: 60px 0
     font-size: 22px
