--- a/front/src/pages/Work/WorkPage.sass
+++ b/front/src/pages/Work/WorkPage.sass
@@ -9,8 +9,66 @@
         font-size: 32px
         text-align: left
         font-weight: bold
+        flex-wrap: wrap
 
     &__desc
         margin-top: 100px
         font-size: 26px
         text-align: left
+
+    &__items
+        justify-content: center
+        flex-direction: column
+        flex-wrap: wrap
+
+    &__item
+        margin-top: 100px
+        flex-direction: column
+        flex-wrap: wrap
+
+        &-title
+            flex-direction: row
+            align-items: center
+
+            a
+                margin-left: 22px
+
+            p
+                font-size: 32px
+                text-align: left
+                font-weight: bold
+
+        &-desc
+            font-size: 26px
+            text-align: left
+            margin-top: 64px
+            text-align: left
+
+        &-image
+            justify-content: center
+            align-items: center
+
+            img
+                height: 700px
+                background-size: cover
+                
+
+@media screen and (max-width: 890px) 
+    .work-page__item-image
+        img
+            height: 500px
+
+@media screen and (max-width: 690px) 
+    .work-page__item-image
+        img
+            height: 300px
+
+
+@media screen and (max-width: 440px) 
+    .work-page__item-image
+        img
+            height: 200px
+
+    .work-page__item-title
+        p
+            font-size: 28px
