--- a/front/src/components/Nav/Nav.sass
+++ b/front/src/components/Nav/Nav.sass
@@ -21,7 +21,7 @@
             height: 32px !important
 
     &__links
-        color: $black
+        color: var(--text-color)
         font-size: 26px
         flex-direction: row
 
@@ -41,7 +41,7 @@
         cursor: pointer
         
     .focus
-        border-bottom: 1px solid $black
+        border-bottom: 1px solid var(--text-color)
 
 
 @media screen and (max-width: 990px) 
