--- a/front/src/styles/_animations.sass
+++ b/front/src/styles/_animations.sass
@@ -1,2 +1,13 @@
 .animate__animated
     animation-fill-mode: none !important
+
+.particles-bg-canvas-self
+    position: absolute
+    z-index: -1
+    top: 0
+    left: 0
+
+html[data-theme='dark']
+    
+    .particles-bg-canvas-self
+        visibility: hidden
